[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.25", features = ["full"] }
hyper-tls = "0.5.0"
pin-project-lite = "0.2.9"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tower-hyper = "0.1.1"
tower-retry = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

[dev-dependencies]
httpmock = "0.7"
